--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "ai": "2.2.26",
     "next": "14.0.1",
-    "openai": "4.16.1",
+    "openai": "^4.16.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0"
   },
